--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
             overflow-x: hidden;
         }
 
-        .container 
+        .container {
             max-width: 700px;
             background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(12px);
